--- a/ansible/roles/shopware-dev/tasks/main.yml
+++ b/ansible/roles/shopware-dev/tasks/main.yml
@@ -1,21 +1,9 @@
 ---
-- name: clone shopware-dev git repo
+- name: clone shopware-production git repo
   git:
-    repo: http://github.com/shopware/development.git
-    version: "{{ shopware_version }}"
+    repo: http://github.com/shopware/production.git
+    version: "6.1"
     dest: /home/vagrant/shopware-dev
-    clone: yes
-
-- name: delete platform folder
-  file:
-    path: /home/vagrant/shopware-dev/platform
-    state: absent
-  
-- name: clone shopware platform git repo
-  git:
-    repo: http://github.com/shopware/platform.git
-    version: "{{ shopware_version }}"
-    dest: /home/vagrant/shopware-dev/platform
     clone: yes
 
 - name: create mysql database 'shopware'
@@ -94,17 +82,6 @@
 - name: disable 000-default.conf
   command: a2dissite 000-default.conf
   become: yes
-
-- name: execute psh.phar install
-  command: "./psh.phar install"
-  args:
-    chdir: /home/vagrant/shopware-dev
-
-- name: set trusted proxies
-  lineinfile:
-    path: /home/vagrant/shopware-dev/.env
-    regexp: '^#TRUSTED_PROXIES'
-    line: 'TRUSTED_PROXIES=127.0.0.1,127.0.0.2,::1'
 
 - name: enable mod_rewrite
   become: yes
